# dugg-fyi

./: .gitignore  DEPLOY.md  LICENSE  PARTNER_AGENT.md  README.md  SETUP.md  blocklist.txt  dugg-cli-wrapper.sh  pyproject.toml
agent/: dugg_agent.py  dugg_rss_agent.py  dugg_rss_example.yaml
chrome-extension/: background.js  content.css  content.js  manifest.json  options.html  options.js  popup.html  popup.js
commands/: dugg.md
docs/: CLI.md  GETTING-STARTED.md  GOVERNANCE.md  HTTP.md  INTEGRATIONS.md  PUBLISHING.md  SCALING.md  SLACK_NOTIFICATIONS.md  TOOLS.md
email-worker/: package.json  wrangler.toml
email-worker/src/: worker.js
src/dugg/: __init__.py  cli.py  db.py  enrichment.py  http.py  rss.py  server.py  sync.py  tui.py
tests/: test_db.py  test_http.py  test_rss.py
