[project]
name = "dugg"
version = "0.1.0"
description = "Agentic-first shared knowledge base. Agents process, Dugg stores, everyone queries."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Kade Dworkin", email = "kade@acquireescapevelocity.com" },
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "yt-dlp>=2024.0.0",
    "beautifulsoup4>=4.12.0",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
dugg = "dugg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dugg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
