[project]
name = "dugg"
version = "0.1.0"
description = "Agentic-first shared knowledge base. Agents process, Dugg stores, everyone queries."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Kade Dworkin", email = "kade@acquireescapevelocity.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "yt-dlp>=2024.0.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.1",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
    "textual>=8.2.3",
    "fastapi>=0.135.3",
]

[project.urls]
Homepage = "https://dugg.fyi"
Repository = "https://github.com/kadedworkin/dugg-fyi"
Documentation = "https://github.com/kadedworkin/dugg-fyi#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
dugg = "dugg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dugg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "build>=1.4.3",
    "hatchling>=1.29.0",
]
